# ChangeLog for sys-fs/aufs3
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/aufs3/ChangeLog,v 1.8 2012/03/29 07:48:46 jlec Exp $

*aufs3-3_p20120329 (29 Mar 2012)

  29 Mar 2012; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20120329.ebuild,
  +files/aufs3-base-3.patch, +files/aufs3-standalone-3.patch:
  Version Bump, #408181

*aufs3-3_p20120319 (19 Mar 2012)

  19 Mar 2012; Justin Lecher <jlec@gentoo.org> files/aufs3-base-x-rcN.patch,
  files/aufs3-standalone-x-rcN.patch, +aufs3-3_p20120319.ebuild:
  Version Bump

*aufs3-3_p20120109 (09 Jan 2012)

  09 Jan 2012; Justin Lecher <jlec@gentoo.org> files/aufs3-standalone-0.patch,
  +files/aufs3-base-2.patch, +files/aufs3-standalone-2.patch,
  +aufs3-3_p20120109.ebuild:
  Version Bump

*aufs3-3_p20111205-r1 (08 Jan 2012)

  08 Jan 2012; Justin Lecher <jlec@gentoo.org> -aufs3-3_p20111205.ebuild,
  +aufs3-3_p20111205-r1.ebuild:
  Restructure patching, #398139

*aufs3-3_p20111205 (05 Jan 2012)

  05 Jan 2012; Justin Lecher <jlec@gentoo.org> +files/aufs3-base-x-rcN.patch,
  +files/aufs3-fix-export-__devcgroup_inode_permission.patch,
  +files/aufs3-standalone-x-rcN.patch, +aufs3-3_p20111205.ebuild:
  Version Bump

*aufs3-3_p20111114 (14 Nov 2011)

  14 Nov 2011; Justin Lecher <jlec@gentoo.org> +aufs3-3_p20111114.ebuild:
  Version Bump

*aufs3-3_p20111031 (31 Oct 2011)

  31 Oct 2011; Justin Lecher <jlec@gentoo.org> files/aufs3-standalone-0.patch,
  +files/aufs3-base-1.patch, +files/aufs3-standalone-1.patch,
  +aufs3-3_p20111031.ebuild, +files/aufs-util-31.patch:
  Version Bump

  28 Aug 2011; Justin Lecher <jlec@gentoo.org> +files/aufs3-base-0.patch,
  +files/aufs3-standalone-0.patch, +aufs3-3_p20110815.ebuild, +files/pax.patch,
  +metadata.xml:
  Moved to tree, fixes bug 376175

  27 Aug 2011; Justin Lecher <jlec@gentoo.org> aufs3-3_p20110815.ebuild:
  Make CONFIG check for EXPORTFS matadory for USE=nfs
