@@ -1,10 +1,10 @@
 aufs3.x-rcN standalone patch
 
 diff --git a/fs/file_table.c b/fs/file_table.c
-index 20002e3..6d792ad 100644
+index 70f2a0f..146a3d7 100644
 --- a/fs/file_table.c
 +++ b/fs/file_table.c
-@@ -443,6 +443,8 @@ void file_sb_list_del(struct file *file)
+@@ -442,6 +442,8 @@ void file_sb_list_del(struct file *file)
  	}
  }
  
@@ -14,10 +14,10 @@ index 20002e3..6d792ad 100644
  
  /*
 diff --git a/fs/inode.c b/fs/inode.c
-index d3ebdbe..6db6251 100644
+index 9f4f5fe..bb0f3ba 100644
 --- a/fs/inode.c
 +++ b/fs/inode.c
-@@ -66,6 +66,7 @@ static struct hlist_head *inode_hashtable __read_mostly;
+@@ -56,6 +56,7 @@ static struct hlist_head *inode_hashtable __read_mostly;
  static __cacheline_aligned_in_smp DEFINE_SPINLOCK(inode_hash_lock);
  
  __cacheline_aligned_in_smp DEFINE_SPINLOCK(inode_sb_list_lock);
@@ -26,10 +26,10 @@ index d3ebdbe..6db6251 100644
  /*
   * Empty aops. Can be used for the cases where the user does not
 diff --git a/fs/namei.c b/fs/namei.c
-index fde8ea2..62f2302 100644
+index b9b8b85..0fa6752 100644
 --- a/fs/namei.c
 +++ b/fs/namei.c
-@@ -1785,6 +1785,7 @@ struct dentry *lookup_hash(struct nameidata *nd)
+@@ -1908,6 +1908,7 @@ struct dentry *lookup_hash(struct nameidata *nd)
  {
  	return __lookup_hash(&nd->last, nd->path.dentry, nd);
  }
@@ -123,10 +123,10 @@ index 77becc0..f634f02 100644
  static long do_sys_truncate(const char __user *pathname, loff_t length)
  {
 diff --git a/fs/splice.c b/fs/splice.c
-index c599f73..00303ba 100644
+index 4f786e3..84e5c7b 100644
 --- a/fs/splice.c
 +++ b/fs/splice.c
-@@ -1108,6 +1108,7 @@ long do_splice_from(struct pipe_inode_info *pipe, struct file *out,
+@@ -1105,6 +1105,7 @@ long do_splice_from(struct pipe_inode_info *pipe, struct file *out,
  
  	return splice_write(pipe, out, ppos, len, flags);
  }
@@ -134,7 +134,7 @@ index c599f73..00303ba 100644
  
  /*
   * Attempt to initiate a splice from a file to a pipe.
-@@ -1134,6 +1135,7 @@ long do_splice_to(struct file *in, loff_t *ppos,
+@@ -1131,6 +1132,7 @@ long do_splice_to(struct file *in, loff_t *ppos,
  
  	return splice_read(in, ppos, pipe, len, flags);
  }
@@ -143,16 +143,16 @@ index c599f73..00303ba 100644
  /**
   * splice_direct_to_actor - splices data directly between two non-pipes
 diff --git a/security/commoncap.c b/security/commoncap.c
-index 7ce191e..19a95be 100644
+index 0cf4b53..6ba43f6 100644
 --- a/security/commoncap.c
 +++ b/security/commoncap.c
-@@ -965,3 +965,4 @@ int cap_file_mmap(struct file *file, unsigned long reqprot,
+@@ -966,3 +966,4 @@ int cap_file_mmap(struct file *file, unsigned long reqprot,
  	}
  	return ret;
  }
 +EXPORT_SYMBOL(cap_file_mmap);
 diff --git a/security/device_cgroup.c b/security/device_cgroup.c
-index 8b5b5d8..911850c 100644
+index c43a332..0c37289 100644
 --- a/security/device_cgroup.c
 +++ b/security/device_cgroup.c
 @@ -7,6 +7,7 @@
@@ -163,7 +163,7 @@ index 8b5b5d8..911850c 100644
  #include <linux/list.h>
  #include <linux/uaccess.h>
  #include <linux/seq_file.h>
-@@ -501,6 +502,7 @@ found:
+@@ -499,6 +500,7 @@ found:
  
  	return -EPERM;
  }
@@ -172,10 +172,10 @@ index 8b5b5d8..911850c 100644
  int devcgroup_inode_mknod(int mode, dev_t dev)
  {
 diff --git a/security/security.c b/security/security.c
-index d754249..1aa6154 100644
+index bf619ff..60b996a 100644
 --- a/security/security.c
 +++ b/security/security.c
-@@ -392,6 +392,7 @@ int security_path_rmdir(struct path *dir, struct dentry *dentry)
+@@ -380,6 +380,7 @@ int security_path_rmdir(struct path *dir, struct dentry *dentry)
  		return 0;
  	return security_ops->path_rmdir(dir, dentry);
  }
@@ -183,7 +183,7 @@ index d754249..1aa6154 100644
  
  int security_path_unlink(struct path *dir, struct dentry *dentry)
  {
-@@ -408,6 +409,7 @@ int security_path_symlink(struct path *dir, struct dentry *dentry,
+@@ -396,6 +397,7 @@ int security_path_symlink(struct path *dir, struct dentry *dentry,
  		return 0;
  	return security_ops->path_symlink(dir, dentry, old_name);
  }
@@ -191,7 +191,7 @@ index d754249..1aa6154 100644
  
  int security_path_link(struct dentry *old_dentry, struct path *new_dir,
  		       struct dentry *new_dentry)
-@@ -416,6 +418,7 @@ int security_path_link(struct dentry *old_dentry, struct path *new_dir,
+@@ -404,6 +406,7 @@ int security_path_link(struct dentry *old_dentry, struct path *new_dir,
  		return 0;
  	return security_ops->path_link(old_dentry, new_dir, new_dentry);
  }
@@ -199,7 +199,7 @@ index d754249..1aa6154 100644
  
  int security_path_rename(struct path *old_dir, struct dentry *old_dentry,
  			 struct path *new_dir, struct dentry *new_dentry)
-@@ -434,6 +437,7 @@ int security_path_truncate(struct path *path)
+@@ -422,6 +425,7 @@ int security_path_truncate(struct path *path)
  		return 0;
  	return security_ops->path_truncate(path);
  }
@@ -207,7 +207,7 @@ index d754249..1aa6154 100644
  
  int security_path_chmod(struct path *path, umode_t mode)
  {
-@@ -441,6 +445,7 @@ int security_path_chmod(struct path *path, umode_t mode)
+@@ -429,6 +433,7 @@ int security_path_chmod(struct path *path, umode_t mode)
  		return 0;
  	return security_ops->path_chmod(path, mode);
  }
@@ -215,7 +215,7 @@ index d754249..1aa6154 100644
  
  int security_path_chown(struct path *path, uid_t uid, gid_t gid)
  {
-@@ -448,6 +453,7 @@ int security_path_chown(struct path *path, uid_t uid, gid_t gid)
+@@ -436,6 +441,7 @@ int security_path_chown(struct path *path, uid_t uid, gid_t gid)
  		return 0;
  	return security_ops->path_chown(path, uid, gid);
  }
@@ -223,7 +223,7 @@ index d754249..1aa6154 100644
  
  int security_path_chroot(struct path *path)
  {
-@@ -524,6 +530,7 @@ int security_inode_readlink(struct dentry *dentry)
+@@ -512,6 +518,7 @@ int security_inode_readlink(struct dentry *dentry)
  		return 0;
  	return security_ops->inode_readlink(dentry);
  }
@@ -231,7 +231,7 @@ index d754249..1aa6154 100644
  
  int security_inode_follow_link(struct dentry *dentry, struct nameidata *nd)
  {
-@@ -538,6 +545,7 @@ int security_inode_permission(struct inode *inode, int mask)
+@@ -526,6 +533,7 @@ int security_inode_permission(struct inode *inode, int mask)
  		return 0;
  	return security_ops->inode_permission(inode, mask);
  }
@@ -239,7 +239,7 @@ index d754249..1aa6154 100644
  
  int security_inode_setattr(struct dentry *dentry, struct iattr *attr)
  {
-@@ -653,6 +661,7 @@ int security_file_permission(struct file *file, int mask)
+@@ -641,6 +649,7 @@ int security_file_permission(struct file *file, int mask)
  
  	return fsnotify_perm(file, mask);
  }
@@ -247,7 +247,7 @@ index d754249..1aa6154 100644
  
  int security_file_alloc(struct file *file)
  {
-@@ -680,6 +689,7 @@ int security_file_mmap(struct file *file, unsigned long reqprot,
+@@ -668,6 +677,7 @@ int security_file_mmap(struct file *file, unsigned long reqprot,
  		return ret;
  	return ima_file_mmap(file, prot);
  }
